--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       </div>
     </div>
   </script>
+  
+  <!-- build:js js/global/config.js -->
+  <script type="text/javascript" src="src/global/_config.js"></script>
+  <!-- endbuild -->
 
   <!-- build:js js/app.js -->
   <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
