--- a/link.html
+++ b/link.html
@@ -50,6 +50,10 @@
     </div>
   </script>
 
+  <!-- build:js js/global/config.js -->
+  <script type="text/javascript" src="src/global/_config.js"></script>
+  <!-- endbuild -->
+  
   <!-- build:js js/link-share.js -->
   <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
