The newest UI of Admin page

--- a/src/admin/users/groups/add-group-modal.html
+++ b/src/admin/users/groups/add-group-modal.html
@@ -22,7 +22,7 @@
 				<div class="gridStyle col-sm-12" ng-grid="addMemberGridOptions"></div>
 			</div>
 		</div>
-		<h4 class="">设置群组用户权限</h4>
+		<h4 class="division">设置群组权限</h4>
 		<div class="form-group">
 			<div class="col-sm-10">
 				<div class="checkbox">
