--- a/src/admin/users/groups/editGroup/update-group-modal.html
+++ b/src/admin/users/groups/editGroup/update-group-modal.html
@@ -2,13 +2,11 @@
 	<h3 class="modal-title">更改群组设置</h3>
 </div>
 <div class="modal-body editGroup" ng-controller="App.Users.Groups.EditGroup.Controller">
-		<div class="col-sm-1">
+		<div class="col-sm-1" style="margin-left:10px;">
 			<img src="./images/grouplist_icon.png" height="64px" width="64px"/>
 		</div>
 		<div class="col-sm-10">
-			<div class="form-group">
-				<label>群组名称</label>
-			</div>
+			<h4 class="modal-title" style="margin-top:0">群组名称</h4>
 			<div class="form-group">
 				<input type="text" ng-model="group.group_name" class="form-control group-name"/>
 			</div>
@@ -34,9 +32,7 @@
 						限定该群组的所有成员只能进行内部协作&nbsp;</label><span tooltip="如果选中，则禁止该群组的成员在自己的文件夹中邀请外部用户进行协作。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
-			<div class="form-group">
-				<label>群组成员</label>
-			</div>
+			<h4 class="modal-title">群组成员</h4>
 			<div class="form-group">
 				<input type ="text" placeholder="搜索人员" class="form-control seach-group" ng-model="seachUsersValue" ng-change="seachUsers(seachUsersValue)"/>
 				<input type="button" class="btn btn-default" value="添加人员" ng-click="addUsersWin()"/>
@@ -45,9 +41,7 @@
 				<div class="gridStyle col-sm-8" ng-grid="gridUser"></div>
 				<div class="col-sm-4"></div>
 			</div>
-			<div class="form-group">
-				<label>可以访问的协作文件夹</label>
-			</div>
+			<h4 class="modal-title">可访问的协作文件夹</h4>
 			<div class="form-group seach-folder">
 				<input type ="text" placeholder="搜索所在文件夹" class="form-control seach-group" ng-model="seachFoldersValue" ng-change="seachFolders(seachFoldersValue)"/>
 				<input type="button" class="btn btn-default" value="添加协作文件夹" ng-click= "addFolderWin()"/>
