--- a/src/admin/users/groups/template.html
+++ b/src/admin/users/groups/template.html
@@ -1,7 +1,7 @@
 <div class="group-view" ng-controller="App.Users.Groups.Controller">
 	<div class="buttonGroup">
 		<button ng-click='addGroup()' class="btn btn-default">
-			增加群组
+			创建群组
 		</button>
 	</div>
 	<div class="groupGridStyle" ng-grid="groupGridOptions"></div>
