--- a/src/admin/users/managedUsers/add-user-modal.html
+++ b/src/admin/users/managedUsers/add-user-modal.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 
-		<h4>访问权限</h4>
+		<h4 class="division">访问权限</h4>
 		<div class="permission-form form-group">
 			<div class="col-sm-8">
 				<div class="checkbox">
@@ -62,13 +62,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="form-group">
+		<div class="form-group division">
 			<label class="col-sm-2 control-label" for="seach">所属群组</label>
 			<div class="col-sm-5">
-				<input type="button" class="btn btn-default" ng-click="addGroupWindow()" value="添加群组"></input>
+				<input type="button" class="btn btn-default" ng-click="addGroupWindow()" value="选择所属群组"></input>
 			</div>
 		</div>
-		<div class="form-group">
+		<div class="form-group indented">
 			<div class="gridStyle col-sm-12" ng-grid="gridAddGroup"></div>
 		</div>
 
