--- a/src/admin/users/externalUsers/editExternalUser/update-externalUser-modal.html
+++ b/src/admin/users/externalUsers/editExternalUser/update-externalUser-modal.html
@@ -2,25 +2,19 @@
 	<h3 class="modal-title">更改用户设置</h3>
 </div>
 <div class="modal-body editExternalUser" ng-controller="App.Users.ExternalUsers.EditExternalUser.Controller">
-		<div class="col-sm-1">
+		<div class="col-sm-1" style="margin-left:10px;">
 			<img ng-src="{{externalUser.avatar}}" height="64px" width="64px"/>
 		</div>
 		<div class="col-sm-10">
-			<div class="form-group">
-				<label>姓名</label>
-			</div>
+			<h4 class="modal-title" style="margin-top:0;">姓名</h4>
 			<div class="form-group">
 				<input type="text" ng-model="externalUser.user_name" class="form-control user-name" disabled/>
 			</div>
-			<div class="form-group">
-				<label>邮箱</label>
-			</div>
+			<h4 class="modal-title" style="margin-top:0;">邮箱</h4>
 			<div class="form-group">
 				<input type="email" ng-model="externalUser.email" class="form-control user-email" disabled/>
 			</div>
-			<div class="form-group">
-				<label>用户所在文件夹</label>
-			</div>
+			<h4 class="modal-title">可访问的协作文件夹</h4>
 			<div class="form-group seach-folder">
 				<input type ="text" placeholder="搜索所在文件夹" class="form-control seach-group" ng-model="seachFoldersValue" ng-change="seachFolders(seachFoldersValue)"/>
 			</div>
