--- a/src/admin/users/managedUsers/editUser/update-user-modal.html
+++ b/src/admin/users/managedUsers/editUser/update-user-modal.html
@@ -2,25 +2,19 @@
 	<h3 class="modal-title">更改用户设置</h3>
 </div>
 <div class="modal-body editUser" ng-controller="App.Users.ManagedUsers.EditUser.Controller">
-		<div class="col-sm-1">
+		<div class="col-sm-1" style="margin-left:10px;">
 			<img ng-src="{{user.avatar}}" height="64px" width="64px"/>
 		</div>
 		<div class="col-sm-10">
-			<div class="form-group">
-				<label>姓名</label>
-			</div>
+			<h4 class="modal-title" style="margin-top:0;">姓名</h4>
 			<div class="form-group">
 				<input type="text" ng-model="user.real_name" class="form-control user-name"/>
 			</div>
-			<div class="form-group">
-				<label>邮箱</label>
-			</div>
+			<h4 class="modal-title" style="margin-top:0;">邮箱</h4>
 			<div class="form-group">
 				<input type="email" ng-model="user.email" class="form-control user-email" disabled/>
 			</div>
-			<div class="form-group">
-				<label>容量</label>
-			</div>
+			<h4 class="modal-title" style="margin-top:0;">容量</h4>
 			<div class="form-group">
 				<input type="text" ng-model="user.total_space" class="form-control user-total-space"/>
 				<label class="">GB</label>
@@ -57,9 +51,7 @@
 						协同管理员&nbsp;</label><span tooltip="授予该用户管理员权限（不能管理主要管理员 main admin，也即不能点击main admin进行编辑；并且协同管理员不能取消自己的管理员权限）。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
-			<div class="form-group">
-				<label>用户所在群组</label>
-			</div>
+			<h4 class="modal-title">用户所在群组</h4>
 			<div class="form-group">
 				<input type ="text" placeholder="搜索所在群组" class="form-control seach-group" ng-model="seachGroupsValue" ng-change="seachGroups(seachGroupsValue)"/>
 				<input type="button" class="btn btn-default" value="添加群组" ng-click="addGroupsWin()"/>
@@ -68,9 +60,7 @@
 				<div class="gridStyle col-sm-8" ng-grid="gridGroup"></div>
 				<div class="col-sm-4"></div>
 			</div>
-			<div class="form-group">
-				<label>可以访问的协作文件夹</label>
-			</div>
+			<h4 class="modal-title">可访问的协作文件夹</h4>
 			<div class="form-group seach-folder">
 				<input type ="text" placeholder="搜索所在文件夹" class="form-control seach-group" ng-model="seachFoldersValue" ng-change="seachFolders(seachFoldersValue)"/>
 				<input type="button" class="btn btn-default" value="添加协作文件夹" ng-click= "addFolderWin()"/>
