--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,7 @@
   <title>管理控制台</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <!-- build:css css/admin/admin.css -->
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
