--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>全携通</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <!-- build:css css/app/app.css -->
   <link rel="stylesheet" type="text/css" href="bower_components/select2/select2.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
