--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   <script type="text/javascript" src="src/app/files/module.js"></script>
   <script type="text/javascript" src="src/app/files/controller.js"></script>
   <script type="text/javascript" src="src/app/files/move-file/controller.js"></script>
+  <script type="text/javascript" src="src/app/files/create-tag/controller.js"></script>
   <script type="text/javascript" src="src/app/files/preview-file/controller.js"></script>
   <script type="text/javascript" src="src/app/files/invite-team-users/controller.js"></script>
   <script type="text/javascript" src="src/app/files/link-share/controller.js"></script>
