addd loading indicator

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
   <script type="text/javascript" src="bower_components/ng-clip/src/ngClip.js"></script>
   <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <!-- global components -->
+  <script type="text/javascript" src="src/global/loading-indicator/loading-indicator.js"></script>
+  <!---->
   <script type="text/javascript" src="src/app/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/app/widgets/notification/factory.js"></script>
   <script type="text/javascript" src="src/app/widgets/utils/factory.js"></script>
