--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <script type="text/javascript" src="src/app/resources/trash.js"></script>
   <script type="text/javascript" src="src/app/resources/contact.js"></script>
   <script type="text/javascript" src="src/app/resources/search.js"></script>
+  <script type="text/javascript" src="src/app/resources/tag.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
