--- a/admin.html
+++ b/admin.html
@@ -35,16 +35,19 @@
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
-
   <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
   <script type="text/javascript" src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
-
   <script type="text/javascript" src="bower_components/es5-shim/es5-shim.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate/angular-translate.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  
+  <!-- global components -->
+  <script type="text/javascript" src="src/global/loading-indicator/loading-indicator.js"></script>
+  <!---->
+  
   <script type="text/javascript" src="src/admin/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/admin/widgets/notification/factory.js"></script>
   <script type="text/javascript" src="src/admin/widgets/utils/factory.js"></script>
