--- a/src/admin/users/groups/template.html
+++ b/src/admin/users/groups/template.html
@@ -5,4 +5,5 @@
 		</button>
 	</div>
 	<div class="groupGridStyle" ng-grid="groupGridOptions"></div>
+	<loading-indicator ng-show="loading"></loading-indicator>
 </div>
