--- a/src/admin/users/managedUsers/template.html
+++ b/src/admin/users/managedUsers/template.html
@@ -4,4 +4,5 @@
 		<button ng-click='exportUser()' class="btn btn-default">导出</button>
 	</div>
   <div class="gridStyle" ng-grid="gridOptions" ></div>
+  <loading-indicator ng-show="loading"></loading-indicator>
 </div>
