--- a/src/admin/users/externalUsers/template.html
+++ b/src/admin/users/externalUsers/template.html
@@ -5,4 +5,5 @@
 		</button>-->
 	</div>
 	<div class="groupGridStyle" ng-grid="externalUserGridOptions"></div>
+	<loading-indicator ng-show="loading"></loading-indicator>
 </div>
