--- a/src/admin/users/groups/add-user-modal.html
+++ b/src/admin/users/groups/add-user-modal.html
@@ -59,7 +59,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" id="checkbox">
-						限定该用户在自己的文件夹中只能邀请内部用&nbsp;</label><span title="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" class="glyphicon glyphicon-info-sign"></span>
+						限定该用户在自己的文件夹中只能邀请内部用户&nbsp;</label><span title="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
