--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
   <script type="text/javascript" src="bower_components/ng-clip/src/ngClip.js"></script>
   <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script type="text/javascript" src="bower_components/Angular-At-Directive/src/at.js"></script>
+  <script type="text/javascript" src="bower_components/Angular-At-Directive/src/caret.js"></script>
   <!-- global components -->
   <script type="text/javascript" src="src/global/loading-indicator/loading-indicator.js"></script>
   <!---->
