--- a/src/admin/sidebar/template.html
+++ b/src/admin/sidebar/template.html
@@ -12,7 +12,7 @@
         	用户与群组
       </a>
     </li>
-    <li ng-class="{ active: $state.includes('reports') }" ng-hide = "true">
+    <li ng-class="{ active: $state.includes('reports') }">
       <a ui-sref="reports" class="reports">
         <span class="reports-img"></span>
         	报表
