linkshare-bug-preview

--- a/link.html
+++ b/link.html
@@ -86,11 +86,13 @@
   <script type="text/javascript" src="src/link-share/resources/users.js"></script>
   <script type="text/javascript" src="src/link-share/resources/share.js"></script>
   <script type="text/javascript" src="src/link-share/resources/folders.js"></script>
+  <script type="text/javascript" src="src/link-share/resources/files.js"></script>
 
   
   <script type="text/javascript" src="src/link-share/main/module.js"></script>
   <script type="text/javascript" src="src/link-share/main/controller.js"></script>
   <script type="text/javascript" src="src/link-share/main/input-password-controller.js"></script>
+  <script type="text/javascript" src="src/link-share/main/preview-file/controller.js"></script>
   
   <script type="text/javascript" src="src/link-share/header/module.js"></script>
   <script type="text/javascript" src="src/link-share/header/controller.js"></script>
