--- a/admin.html
+++ b/admin.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <!-- build:css css/admin/admin.css -->
+  <link rel="stylesheet" type="text/css" href="bower_components/perfect-scrollbar/src/perfect-scrollbar.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
   <link rel="stylesheet" type="text/css" href="src/admin/admin.css">
@@ -43,6 +44,9 @@
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script type="text/javascript" src="bower_components/perfect-scrollbar/src/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="bower_components/perfect-scrollbar/src/perfect-scrollbar.js"></script>
+  <script type="text/javascript" src="bower_components/angular-perfect-scrollbar/src/angular-perfect-scrollbar.js"></script>
   
   <!-- global components -->
   <script type="text/javascript" src="src/global/loading-indicator/loading-indicator.js"></script>
@@ -51,12 +55,16 @@
   <script type="text/javascript" src="src/admin/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/admin/widgets/notification/factory.js"></script>
   <script type="text/javascript" src="src/admin/widgets/utils/factory.js"></script>
+  <!-- resources -->
   <script type="text/javascript" src="src/admin/resources/resources.js"></script>
   <script type="text/javascript" src="src/admin/resources/users.js"></script>
   <script type="text/javascript" src="src/admin/resources/group.js"></script>
   <script type="text/javascript" src="src/admin/resources/externalUsers.js"></script>
   <script type="text/javascript" src="src/admin/resources/overView.js"></script>
   <script type="text/javascript" src="src/admin/resources/share.js"></script>
+  <script type="text/javascript" src="src/admin/resources/cloud.js"></script>
+  
+
   <script type="text/javascript" src="src/admin/header/module.js"></script>
   <script type="text/javascript" src="src/admin/header/controller.js"></script>
   <script type="text/javascript" src="src/admin/sidebar/module.js"></script>
