--- a/invite.html
+++ b/invite.html
@@ -301,7 +301,7 @@
 	</head>
 	<body>
 		<div class="main container text-center">
-			<img src="images/logo.jpg" style="position:relative;cursor: pointer;" id="logohome"/>
+			<img src="images/logo.png" style="position:relative;cursor: pointer;" id="logohome"/>
 			<div class="form-back">
 				<div class="wrapper">
 					<form id="" class="form" roll="form">
