--- a/invite.html
+++ b/invite.html
@@ -25,22 +25,22 @@
 			}
 
 			button {
-				background-color: #4A9AFD;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
 			button:hover {
-				background-color: #2685FC;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
 			button:focus {
-				background-color: #2685FC;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
 			.btn:hover, .btn:hover {
-				background-color: #2685FC;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
@@ -301,7 +301,7 @@
 	</head>
 	<body>
 		<div class="main container text-center">
-			<img src="images/logo.jpg" style="position:relative;cursor: pointer;" id="logohome"/>
+			<img src="images/login_logo.png" style="position:relative;cursor: pointer;" id="logohome"/>
 			<div class="form-back">
 				<div class="wrapper">
 					<form id="" class="form" roll="form">
