fix auto submit form

--- a/invite.html
+++ b/invite.html
@@ -283,7 +283,7 @@
 							<span class="agree">点击注册表示同意&nbsp;《<a class="show_agree" href="#agreement">服务条款</a>》</span>
 						</div>
 						<div class="text-center">
-							<button class="btn btn-block" id="active">激&nbsp;&nbsp;&nbsp;活</button>
+							<button class="btn btn-block" type="button" id="active">激&nbsp;&nbsp;&nbsp;活</button>
 						</div>
 						<div class="register">
 							<label class="pull-left"> 
