--- a/invite.html
+++ b/invite.html
@@ -25,22 +25,22 @@
 			}
 
 			button {
-				background-color: #4A9AFD;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
 			button:hover {
-				background-color: #2685FC;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
 			button:focus {
-				background-color: #2685FC;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
 			.btn:hover, .btn:hover {
-				background-color: #2685FC;
+				background-color: #1b599b;
 				color: #FFFFFF;
 			}
 
