--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
   <script type="text/javascript" src="src/app/files/link-share/controller.js"></script>
   <script type="text/javascript" src="src/app/files/team-controller.js"></script>
   <script type="text/javascript" src="src/app/files/user-discuss-controller.js"></script>
+  
 
   <script type="text/javascript" src="src/app/contacts/module.js"></script>
   <script type="text/javascript" src="src/app/contacts/controller.js"></script>
@@ -136,6 +137,9 @@
   <script type="text/javascript" src="src/app/trash/module.js"></script>
   <script type="text/javascript" src="src/app/trash/controller.js"></script>
 
+  <script type="text/javascript" src="src/app/search/module.js"></script>
+  <script type="text/javascript" src="src/app/search/controller.js"></script>
+  
   <script type="text/javascript" src="src/app/upload-progress-dialog/module.js"></script>
   <script type="text/javascript" src="src/app/upload-progress-dialog/controller.js"></script>
   
