--- a/login.html
+++ b/login.html
@@ -304,7 +304,7 @@
             </div>
             <div class="register">
               <label class="pull-left"> 没有账号？
-                <a class="" href="regist.html">
+                <a class="" href="#">
                   立即注册
                 </a> </label>
               <a class="pull-right" href="#">
