home.html apps.html

--- a/link.html
+++ b/link.html
@@ -36,7 +36,7 @@
     <div class="input-password">
       <img src="./images/logo_white_max.png" />
       <div class="form-group">
-        <input class="form-control" placeholder="输入文件提取密码" ng-model = "password"/>
+        <input class="form-control" type="password" placeholder="输入文件提取密码" ng-model = "password"/>
         <input type="button"  class="btn btn-warning" value="确定" ng-click = "checkPassword(password)"/>
       </div>
     </div>
