--- a/apps.html
+++ b/apps.html
@@ -39,6 +39,10 @@
         margin-top: 20px;
       }
       
+      .logo a{
+        cursor: pointer;
+      }
+      
       li{
         list-style: none outside none;
       }
@@ -227,7 +231,9 @@
 	  <div class="top">
 	    <div class="container top-bar">
 	      <div class="logo pull-left">
-	        <img src="images/home_top_bar_whitebg_logo.png" />
+	        <a href="apps.html">
+	          <img src="images/home_top_bar_whitebg_logo.png" />
+	        </a>
 	      </div>
 	      <div class="pull-right button-group">
           <a class="btn login" href="login.html">登录</a>
