--- a/login.html
+++ b/login.html
@@ -307,7 +307,7 @@
                 <a class="" href="#">
                   立即注册
                 </a> </label>
-              <a class="pull-right" href="#">
+              <a class="pull-right" href="home.html">
                 返回首页
               </a>
             </div>
