--- a/invite.html
+++ b/invite.html
@@ -290,7 +290,7 @@
 								已有账号？
 								<a class= "" href="login.html">立即登录</a>
 							</label>
-							<a class="pull-right" href="home">
+							<a class="pull-right" href="home.html">
 								返回首页
 							</a>
 						</div>
