add at direcitve

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/select2/select2.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="src/global/at-directive.js"></script>
   <script type="text/javascript" src="bower_components/perfect-scrollbar/src/jquery.mousewheel.js"></script>
   <script type="text/javascript" src="bower_components/perfect-scrollbar/src/perfect-scrollbar.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-select2/src/select2.js"></script>
