--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/angular-treeview/css/angular.treeview.css">
   <link rel="stylesheet" type="text/css" href="bower_components/angular-snap/angular-snap.min.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-select/dist/css/bootstrap-select.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/jquery.atwho/dist/css/jquery.atwho.css">
   <link rel="stylesheet" type="text/css" href="src/app/app.css">
   <!-- endbuild -->
   
@@ -86,8 +87,8 @@
   <script type="text/javascript" src="bower_components/ng-clip/src/ngClip.js"></script>
   <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-  <script type="text/javascript" src="bower_components/Angular-At-Directive/src/at.js"></script>
-  <script type="text/javascript" src="bower_components/Angular-At-Directive/src/caret.js"></script>
+  <script type="text/javascript" src="bower_components/Caret.js/dist/jquery.caret.js"></script>
+  <script type="text/javascript" src="bower_components/jquery.atwho/dist/js/jquery.atwho.js"></script>
   <!-- global components -->
   <script type="text/javascript" src="src/global/loading-indicator/loading-indicator.js"></script>
   <!---->
