multilingual and bug

--- a/invite.html
+++ b/invite.html
@@ -280,7 +280,7 @@
 							</div>
 						</div>
 						<div class="checkbox text-center">
-							<span class="agree">点击注册表示同意&nbsp;《<a class="show_agree" href="#agreement">服务条款</a>》</span>
+							<span class="agree">点击激活表示同意&nbsp;《<a class="show_agree" href="#agreement">服务条款</a>》</span>
 						</div>
 						<div class="text-center">
 							<button class="btn btn-block" type="button" id="active">激&nbsp;&nbsp;&nbsp;活</button>
