--- a/src/admin/header/template.html
+++ b/src/admin/header/template.html
@@ -1,6 +1,6 @@
 <div class="header-view" ng-controller="App.Header.Controller">
 	<div class="header-ext">
-		<div class="indicator pull-left">管理控制台</div>
+		<div class="indicator pull-left">{{'ADMIN_CONSOLE_OF_ACT' | translate}}</div>
 		<div class="back-main pull-right" ng-click = "backToindex()">
 			<div class="back-img"></div>
 			返回我的主页面
