--- a/apps.html
+++ b/apps.html
@@ -182,6 +182,7 @@
       
       .bottom .link a{
         color: #ffffff;
+        cursor: pointer;
       }
       
       .bottom .two-dimension-code{
@@ -308,7 +309,7 @@
         </div>
         <div class="col-sm-2 friend-ship-link">
           <div class="link-text">友情链接</div>
-          <div class="link"><a>http://www.sharpinteract.com/</a></div>
+          <div class="link"><a href="http://www.sharpinteract.com/">http://www.sharpinteract.com/</a></div>
         </div>
         <div class="col-sm-2 pull-right two-dimension-code">
           <div class="code-text">官方微信</div>  
