--- a/login.html
+++ b/login.html
@@ -147,6 +147,7 @@
         });
       });
       $(document).ready(function() {
+        console.log(navigator.language);
         var htmlcore = '';
         if (navigator.userAgent.indexOf("MSIE") > 0) {
           htmlcore = "MSIE";
