--- a/apps.html
+++ b/apps.html
@@ -232,7 +232,7 @@
 	  <div class="top">
 	    <div class="container top-bar">
 	      <div class="logo pull-left">
-	        <a href="apps.html">
+	        <a href="home.html">
 	          <img src="images/home_top_bar_whitebg_logo.png" />
 	        </a>
 	      </div>
