--- a/login.html
+++ b/login.html
@@ -143,7 +143,7 @@
           window.location.href = 'index.html';
         }
         $('#logohome').click(function(e) {
-          window.location.href = 'home';
+          window.location.href = 'home.html';
         });
       });
       $(document).ready(function() {
