--- a/apps.html
+++ b/apps.html
@@ -272,7 +272,7 @@
             </a>
           </div>
           <div class="andriod">
-            <a href="http://www.wandoujia.com/apps/com.icocoa_flybox" target="_Blank">
+            <a href="http://www.quanxietong.com/api/app/download?type=app_android">
               <img src="images/home_downloadpage_btn_andriod.png" />
             </a>
           </div>
